update two sum (use req, res)